# llm_trading_bot

./: LICENSE  README.md  check_portfolio_sync.py  config.py  db_visualizer.py  enhanced_stock_discovery.py  fix_database.py  main.py  pyproject.toml  run_bot.py  trading_agent.db  trading_agent_backup_20250604_234239.db  view_db.py  web_dashboard.py
templates/: dashboard.html
